# ml-lab4

./: CMakeLists.txt  README.md  fuzzy_logic.cpp  fuzzy_logic.h  fuzzycontroller.cpp  fuzzycontroller.h  main.cpp  mainwindow.cpp  mainwindow.h
